2003-10-12  John Levon  <levon@movementarian.org>

	* utils/opcontrol: share --separate-cpu/thread code now

2003-10-12  Philippe Elie  <phil.el@wanadoo.fr>

	* configure.in: add libregex/tests/mangled-name.in
	* libregex/tests/mangled-name.txt: move ...
	* libregex/tests/mangled-name.in: here, tune to support different arch
	* libregex/tests/Makefile.am: s/mangled-name.txt/mangled-name.in
	* libregex/stl.pat.in: fix iterator<... ptrdiff_t>
	* libregex/tests/Makefile.am: update according to filename change

	* libregex/tests/regex_test.cpp: really fails on exception.

2003-10-12  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/oprofiled.c: don't set cpu_number when !--separate=cpu
	
	* libop/tests/alloc_counter_tests.c: printf format for 64 bits arch
	* libop/tests/cpu_type_tests.c: #include <string.h>
	* libop/tests/parse_event_tests.c: #include <string.h>

2003-10-11  Philippe Elie  <phil.el@wanadoo.fr>

	* libop/op_interface.h: struct op_sample: remove packed attribute

2003-10-11  Philippe Elie  <phil.el@wanadoo.fr>

	* dae/opd_image.c:
	* dae/opd_image.h: reference count opd_image. Remove modification time
	  checking. Remove hash field. Tidy
	* dae/opd_kernel.c: pass tid, tgid to op_get_kernel_image()
	* dae/opd_mapping.c:
	* dae/opd_mapping.h: use module hash code for image name to index
	  a cache of name, this hash code is no longer used elsewhere. When
	  killing map delete associated image, reference count of image
	  will check for a real delete.
	* dae/opd_parse_proc.c: get tgid from /proc/pid/status
	* dae/opd_proc.c: create an opd_proc by process when
	  separate_thread == true. Tidy by adding an opd_for_each_proc()
	* dae/opd_proc.h: add tid/tgid to opd_proc struct
	* dae/opd_sample_files.c:
	* dae/opd_sample_files.h: lru all samples files, allowing to cleanup
	  a part of the lru if we go out of resource. Remove
	  opd_handle_old_sample_files() since we no longer check for image
	  modification time.
	* dae/opd_stats.c: